# stortingsverv-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  connectivity-probe.yml  parse-and-release.yml
backfill/: manifest.json
backfill/stortinget_api/: regjering_current.json  representanter_1997-2001.json  representanter_2001-2005.json  representanter_2005-2009.json  representanter_2009-2013.json  representanter_2013-2017.json  representanter_2017-2021.json  representanter_2021-2025.json  representanter_2025-2029.json
cache/llm/v1/: 00.jsonl  01.jsonl  02.jsonl  03.jsonl  04.jsonl  05.jsonl  06.jsonl  07.jsonl  08.jsonl  09.jsonl  0a.jsonl  0b.jsonl  0c.jsonl  0d.jsonl  0e.jsonl  0f.jsonl  10.jsonl  11.jsonl  12.jsonl  13.jsonl  14.jsonl  15.jsonl  16.jsonl  17.jsonl  18.jsonl  19.jsonl  1a.jsonl  1b.jsonl  1c.jsonl  1d.jsonl  1e.jsonl  1f.jsonl  20.jsonl  21.jsonl  22.jsonl  23.jsonl  24.jsonl  25.jsonl  26.jsonl  27.jsonl  (+216 more)
data-md/: README.md  documents.md  items.md  persons.md  sections.md  transactions.md
docs/: provenance.md
smk/: manifest.json
src/stortingsverv_parser/: archive.py  carve.py  cli.py  datasets.py  enrich.py  layout.py  markdown.py  roster.py  smk.py  smk_layout.py
tests/: test_backfill_and_markdown.py  test_layout.py
tools/probe/: Dockerfile  README.md  main.py  probe_lib.py
