[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stortingsverv-parser"
dynamic = ["version"]
description = "Datasets from the Stortinget register of members' positions and economic interests"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sondre" }]
dependencies = [
    "pdfplumber>=0.11,<0.13",
    "pyarrow>=15",
    "typer>=0.12,<1",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
stortingsverv = "stortingsverv_parser.cli:app"

[tool.hatch.version]
path = "src/stortingsverv_parser/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stortingsverv_parser"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
